--- a/android/app/src/main/res/drawable/ic_notification.xml
+++ b/android/app/src/main/res/drawable/ic_notification.xml
@@ -3,22 +3,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-    
-    <!-- Ícono de cartera/billetera para notificaciones -->
-    <!-- Diseño: Cartera simple con bolsillo superior -->
-    
-    <!-- Cuerpo principal de la cartera -->
     <path
         android:fillColor="#FFFFFFFF"
-        android:pathData="M20,8H4c-1.1,0 -2,0.9 -2,2v10c0,1.1 0.9,2 2,2h16c1.1,0 2,-0.9 2,-2V10C22,8.9 21.1,8 20,8z" />
-    
-    <!-- Bolsillo superior / solapa -->
-    <path
-        android:fillColor="#FFFFFFFF"
-        android:pathData="M18,4H6C4.9,4 4,4.9 4,6v3h16V6C20,4.9 19.1,4 18,4z" />
-    
-    <!-- Detalle: línea de cierre / botón (círculo pequeño) -->
-    <path
-        android:fillColor="#FFFFFFFF"
-        android:pathData="M12,14m-1.5,0a1.5,1.5 0,1 1,3 0a1.5,1.5 0,1 1,-3 0" />
+        android:pathData="M21,7L20,7L20,6a3,3 0,0 0,-3 -3L5,3A3,3 0,0 0,2 6L2,18a3,3 0,0 0,3 3L19,21a3,3 0,0 0,3 -3L22,10A3,3 0,0 0,21 7ZM5,5L17,5a1,1 0,0 1,1 1L18,7L5,7A1,1 0,0 1,5 5ZM20,18a1,1 0,0 1,-1 1L5,19a1,1 0,0 1,-1 -1L4,8.83A3,3 0,0 0,5 9L19,9a1,1 0,0 1,1 1ZM16,12a1,1 0,1 1,1 1A1,1 0,0 1,16 12Z" />
 </vector>
